Simplify negated StringUtils.isBlank/isNotBlank replacements
Detect when the call is negated and swap the replacement template
(De Morgan's law) instead of wrapping with !(), producing cleaner output:
- !StringUtils.isBlank(x) → x != null && !x.isBlank()
- !StringUtils.isNotBlank(x) → x == null || x.isBlank()

Also inline JavaTemplate fields to use static JavaTemplate.apply.